fixed background not working on mobile device

--- a/style.css
+++ b/style.css
@@ -490,6 +490,7 @@ footer p {
   .aboutUsImg {
     background-size: cover;
     background-position: center;
+    background-attachment: none;
   }
   .fleetImg {
     background-size: cover;
@@ -508,6 +509,15 @@ footer p {
     max-width: none;
     padding-right: 0;
   }
+  /* .aboutUsImg {
+    width: 100%;
+    height: 70vh;
+    background-image: url("https://plus.unsplash.com/premium_photo-1676139860076-bc568722ff75?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGxhY2V8ZW58MHx8MHx8fDA%3D");
+    background-size: contain;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  } */
 }
 @media (min-width: 576px) {
   .container {
